[workspace]
members = ["stun-types", "stun-proto", "fuzz"]
default-members = ["stun-types", "stun-proto"]
resolver = "2"

[workspace.package]
version = "0.4.0"
repository = "https://github.com/ystreet/stun-proto"
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
byteorder = "1"
rand = "0.9"
tracing = "0.1"
thiserror = "2"
tracing-subscriber = "0.3"
criterion = "0.5"
