[workspace]
members = ["stun-types", "stun-proto", "fuzz"]
default-members = ["stun-types", "stun-proto"]
resolver = "2"

[workspace.package]
version = "2.0.1"
repository = "https://github.com/ystreet/stun-proto"
edition = "2021"
rust-version = "1.77.0"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
byteorder = { version = "1", default-features = false }
hashbrown = { version = "0.16", default-features = false }
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
sans-io-time = { version = "0.2", default-features = false }
siphasher = "1"
smallvec = "1.6.1"
subtle = "2"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
thiserror = { version = "2", default-features = false }
tracing-subscriber = "0.3.20"

criterion = "0.7"

[profile.bench]
codegen-units = 16
lto = "thin"
