[package]
name = "stun-proto"
description = "STUN protocol in a sans-IO fashion"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/stun-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
stun-types = { path = "../stun-types", version = "0.5.1" }
byteorder.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
criterion.workspace = true

[[bench]]
name = "agent_send"
harness = false

[[bench]]
name = "agent_recv"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
