[package]
name = "stun-proto"
description = "STUN protocol in a sans-IO fashion"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/stun-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
stun-types = { path = "../stun-types", version = "2.0.0-rc.3", default-features = false }
hashbrown.workspace = true
base64 = "0.22"
byteorder.workspace = true
rand.workspace = true
sans-io-time.workspace = true
siphasher.workspace = true
smallvec.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing = { workspace = true, features = ["std"] }
sans-io-time = { workspace = true, features = ["std"] }
criterion.workspace = true

[features]
default = ["std"]
std = ["stun-types/std", "thiserror/std", "rand/thread_rng", "sans-io-time/std"]

[[bench]]
name = "agent_send"
harness = false

[[bench]]
name = "agent_recv"
harness = false

[[bench]]
name = "auth_short_term"
harness = false

[[bench]]
name = "auth_long_term"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
