[package]
name = "stun-types"
description = "STUN parsing and writing"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["STUN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/stun-types"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
crc = "3"
hmac = "0.12"
md-5 = { version = "0.10", default-features = false }
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
tracing.workspace = true
arbitrary ={ workspace = true, optional = true }
thiserror.workspace = true
smallvec = "1.6.1"

[dev-dependencies]
tracing-subscriber.workspace = true
tracing = { workspace = true, features = ["std"] }
criterion.workspace = true

[features]
default = ["std"]
std = ["thiserror/std", "rand/thread_rng"]
arbitrary = ["dep:arbitrary"]

[[bench]]
name = "message_parse"
harness = false

[[bench]]
name = "message_write"
harness = false

[[bench]]
name = "attribute_write"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
